Update App or Website thru Linear Regression .ipynb

--- a/App or Website thru Linear Regression .ipynb
+++ b/App or Website thru Linear Regression .ipynb
@@ -490,7 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# From above we can draw a conclusion that the Yearly Amount Spent and Length OF Membership are high;y correlated\n",
+    "# From above we can draw a conclusion that the Yearly Amount Spent and Length OF Membership are highly correlated\n",
     "# For better understanding"
    ]
   },
@@ -884,10 +884,10 @@
     "\n",
     "## 98% variability in Yearly Amount Spent was based on the independent variables considered in the model \n",
     "## Avg_Session_Length+Time_on_App+Time_on_Website+Length_of_Membership\n",
-    "## Fix all other features fixed, a 1 unit increase in Avg. Session Length is associated with an increase of 25.73 total amount spent.\n",
-    "## Fix all other features fixed, a 1 unit increase in Time on App is associated with an increase of 38.70 total amount spent.\n",
-    "## Fix all other features fixed, a 1 unit increase in Time on Website is associated with an increase of 0.43 total amount spent.\n",
-    "## Fix all other features fixed, a 1 unit increase in Length of Membership is associated with an increase of 61.57 total amount spent.\n",
+    "## Fix all other features, a 1 unit increase in Avg. Session Length is associated with an increase of 25.73 total amount spent.\n",
+    "## Fix all other features, a 1 unit increase in Time on App is associated with an increase of 38.70 total amount spent.\n",
+    "## Fix all other features, a 1 unit increase in Time on Website is associated with an increase of 0.43 total amount spent.\n",
+    "## Fix all other features, a 1 unit increase in Length of Membership is associated with an increase of 61.57 total amount spent.\n",
     "\n",
     "# Time on App is much more significnt than the time investing on the website, so its on the company should give extra focus on website interface \n",
     "# so to make user friendly and robust"
